# ai_study_assistant

./: .gitignore  README.md  calculo-trascendentes-tempranas-zill-4th_funciones_global_summary.md  config.json  pyproject.toml
src/ai_study_assistant/: config.py  extractors.py  generator.py  main.py  web_extractor.py
