[tool.poetry]
name = "ai-study-assistant"
version = "0.1.0"
description = "An AI assistant to summarize book chapters and generate study notes using GroqCloud."
authors = ["RodriNico2206 <rodrigo.n.ayala18@gmail.com>"]
readme = "README.md"
packages = [{include = "ai_study_assistant", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
groq = "^0.18.0"
python-dotenv = "^1.0.1"
pypdf = "^5.0.0"

[tool.poetry.scripts]
study-assistant = "ai_study_assistant.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"