[tool.poetry]
name = "ai-study-assistant"
version = "0.1.0"
description = "An AI assistant to summarize book chapters and generate study notes using GroqCloud."
authors = ["RodriNico2206 <rodrigo.n.ayala18@gmail.com>"]
readme = "README.md"
packages = [{include = "ai_study_assistant", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
groq = ">=0.18.0,<1.0.0"
python-dotenv = ">=1.0.0,<2.0.0"
pypdf = ">=5.0.0,<6.0.0"
pytesseract = ">=0.3.10,<0.4.0"
pdf2image = ">=1.17.0,<2.0.0"
pillow = ">=10.0.0,<12.0.0"
playwright = "^1.61.0"
beautifulsoup4 = "^4.15.0"
requests = "^2.34.2"

[tool.poetry.group.dev.dependencies]
black = ">=24.0.0,<25.0.0"
pytest = ">=8.0.0,<9.0.0"

[tool.poetry.scripts]
study-assistant = "ai_study_assistant.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"